# gt

./: CMakeLists.txt  README.md  main.cpp
include/: arguments.h  gt.h  help.h  utils.h
src/: arguments.cpp  gt.cpp  help.cpp  main.cpp  utils.cpp
